# mcp_rag

./: .coverage  .coveragerc  .dockerignore  .gitignore  .safety-project.ini  DOCKER.md  DOCKER_DEPLOYMENT.md  Dockerfile  IMPLEMENTATION_GUIDE.md  LICENSE  README.md  RESTRUCTURE_SUMMARY.md  TRUNK_BASED_DEVELOPMENT.md  docker-build.sh  docker-compose.yml  get_chroma_info.py  main.py  mcp_server.py  pyproject.toml  pytest.ini  run_coverage.py  run_html_coverage.py  separator.md  setup_trunk_development.py  test_embedding_isolation.py
.github/: branch-protection-config.md
.github/PULL_REQUEST_TEMPLATE/: default.md  quick.md
.github/workflows/: ci.yml  release.yml
docs/: STREAMABLE_HTTP_DEPLOYMENT.md
local_docker_deployment/: chromadb-server.bat  deploy-mcp-server.sh  docker-compose.mcp-server.yml  docker-compose.yml
local_docker_deployment_from_ghcr/: README-Windows.md  README.md  deploy-mcp-server.bat  deploy-mcp-server.sh
local_docker_deployment_from_local/: README.md  deploy.bat  deploy.sh  docker-compose.mcp-server.yml  docker-compose.yml  shutdown.bat  shutdown.sh
rag_fetch/: search_similarity.py
rag_store/: pdf_processor.py  store_embeddings.py  test_chunking_methods.py  test_document.txt
revisit_for_legacy_word/: README.md  check_word_docs.py  convert_word_docs.py  store_word_only.py  test_docx_processor.py  test_single_word_doc.py
scripts/: README.md  chromadb-server.sh
setup_chroma_db/: chromadb-server.sh  docker-compose.yml
setup_chromadb/: README.md  init_chroma.py  test_chroma_client.py  test_local_chroma.py
setup_chromadb_old/: docker-compose.yml  test_local_chroma.py
src/rag_fetch/: .env_template  README.md  __init__.py  _version.py  cli.py  config.py  connection_manager.py  mcp_server.py  search_similarity.py
src/rag_store/: .env_template  README.md  __init__.py  _version.py  cli.py  document_processor.py  logging_config.py  mht_processor.py  pdf_processor.py  store_embeddings.py  text_processor.py  word_processor.py
tests/: .coverage  TEST_README.md  __init__.py  run_tests.py
tests/ssl_certs/: ca-cert.pem  ca-key.pem  expired-cert.pem  expired-key.pem  generate_test_certs.sh  invalid-cert.pem  selfsigned-cert.pem  selfsigned-key.pem  server-cert.pem  server-key.pem
tests/test_rag_fetch/: __init__.py  test_cli.py  test_mcp_integration.py  test_mcp_server_functions.py  test_mcp_server_http.py  test_mcp_server_https.py  test_search_similarity.py  test_ssl_config.py
tests/test_rag_store/: __init__.py  test_cli.py  test_document_processor.py  test_mht_processor.py  test_pdf_processor.py  test_store_embeddings.py  test_text_processor.py  test_word_processor.py
